--- a/main.css
+++ b/main.css
@@ -38,18 +38,18 @@
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
-    margin: 0 auto;
     width: 100%;
     min-height: 100vh;
+    display: grid;
+    place-items: center;
   }
-  
+
   .wrapper{
     border: 1px solid hsl(225, 100%, 94%);
-    margin: 1em auto;
     border-radius: 15px;
     background: white;
     box-shadow: 0px 10px 12px hsl(224, 82%, 89%);
-    width: 30%;
+    width: 375px;
   }
 
   .firstimg{
@@ -188,11 +188,3 @@ button{
 
     
 }
-
-
-
-
-
-
-
-
